# relation_server

./: .dockerignore  .editorconfig  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.org  docker-compose.yaml  flake.nix  justfile  schema.graphql
.github/workflows/: binary.yaml  build.yaml  build_nix.yml  container.yaml
benchmark/: .gitignore  concurrent_twitter.js  package.json  pnpm-lock.yaml
config/: main.sample.toml  main_sample.toml
deploy/: README.org  docker-compose.yaml
deploy/config/: db_init.js  main.toml
docs/: api.apib
examples/: lambda.rs  standalone.rs
gsql_client/: .env.example  enable_auth.sh  justfile
src/: lib.rs
src/config/: env.rs  mod.rs
src/config/db/: schema.yaml
src/config/db/migrations/: 1653725784125_create_identities.yaml  1653836131574_add_proofs_collection.yaml  1656232980088_add_nft_vertex.yaml  1656233030721_add_own_edge.yaml  1658056022122_add_vertex_contracts.yaml  1658056029413_add_edge_holds.yaml  1658645480601_add_unique_index_to_identity.yaml  1659183120167_add_edge_resolve.yaml  1659514687617_add_graph_identity.yaml  1660206807852_add_contract_graph.yaml  1666604073796_add_unique_index_to_contracts.yaml
src/config/tdb/: DBImportExport_AssetGraph.gsql  DBImportExport_IdentityGraph.gsql  DBImportExport_SocialGraph.gsql  SCHEMA_CHANGE.gsql  global.gsql
src/config/tdb/auth/: secret.sample.toml
src/config/tdb/graph/ExportedGraph/: global.gsql
src/config/tdb/migrations/: Alter_SocialGraph.gsql  DBImportExport_AssetGraph.gsql  DBImportExport_IdentityGraph.gsql  DBImportExport_SocialGraph.gsql  LoadingJob_SocialData.gsql  LoadingJob_SocialGraph.gsql  SCHEMA_CHANGE.gsql  global.gsql  run_loading_jobs.gsql
src/controller/: healthz.rs  mod.rs
src/controller/graphql/: contract.rs  hold.rs  identity.rs  mod.rs  nft.rs  proof.rs  resolve.rs
src/controller/lambda/: mod.rs
src/controller/tigergraphql/: contract.rs  hold.rs  identity.rs  identity_graph.rs  mod.rs  proof.rs  relation.rs  resolve.rs  social.rs
src/error/: mod.rs
src/fetcher/: mod.rs  tests.rs
src/graph/: arangopool.rs  mod.rs  pool.rs  tests.rs
src/graph/edge/: hold.rs  hold2.rs  mod.rs  own.rs  proof.rs  resolve.rs
src/graph/vertex/: contract.rs  identity.rs  mod.rs  nft.rs
src/newgraph/: mod.rs  test.rs
src/newgraph/edge/: proof.rs
src/newgraph/vertex/: identity.rs
src/proof_client/: mod.rs  tests.rs
src/sybil_list/: mod.rs  tests.rs
src/tests/: mod.rs
src/tigergraph/: mod.rs  tests.rs  upsert.rs
src/tigergraph/edge/: hold.rs  mod.rs  part_of_collection.rs  part_of_identities_graph.rs  proof.rs  relation.rs  resolve.rs  social.rs
src/tigergraph/vertex/: contract.rs  domain_collection.rs  identity.rs  identity_graph.rs  mod.rs
src/upstream/: mod.rs  tests.rs
src/upstream/aggregation/: mod.rs  tests.rs
src/upstream/chainbase/: mod.rs
src/upstream/clusters/: mod.rs  tests.rs
src/upstream/crossbell/: mod.rs  tests.rs
src/upstream/dotbit/: mod.rs  tests.rs
src/upstream/ens_reverse/: mod.rs  tests.rs
src/upstream/farcaster/: mod.rs  tests.rs  warpcast.rs
src/upstream/firefly/: mod.rs  tests.rs
src/upstream/genome/: mod.rs  tests.rs
src/upstream/keybase/: mod.rs  tests.rs
src/upstream/knn3/: mod.rs  tests.rs
src/upstream/lens/: mod.rs  tests.rs
src/upstream/lensv2/: mod.rs  schema.graphql  tests.rs
src/upstream/opensea/: mod.rs
src/upstream/proof_client/: mod.rs  tests.rs
src/upstream/rss3/: mod.rs  tests.rs
src/upstream/solana/: mod.rs  tests.rs
src/upstream/space_id/: mod.rs  tests.rs  v3.rs
src/upstream/sybil_list/: mod.rs  tests.rs
src/upstream/the_graph/: mod.rs  tests.rs
src/upstream/types/: chain.rs  contract_category.rs  data_fetcher.rs  data_source.rs  domain_name.rs  domain_status.rs  level.rs  mod.rs  platform.rs  target.rs
src/upstream/unstoppable/: mod.rs  tests.rs
src/util/: mod.rs  tests.rs
