[package]
name = "relation_server"
version = "0.1.0"
edition = "2021"
autobins = false
authors = ["Nyk Ma <nykma@mask.io>"]
description = "KV storage for each entity of proof_server in NextID ecosystem"
readme = "README.org"
repository = "https://github.com/nextdotid/relation_server"
publish = false

[dependencies]
config = "0.12"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.9"
thiserror = "1.0"

http = "0.2.6"
url = "2.2"
lambda_runtime = "0.5.0"
lambda_http = "0.5.0"
hyper = { version = "0.14.17", features = ["full"] }
hyper-tls = "*"
warp = { version = "0.3" }

tokio = { version = "1", features = ["full"] }
tokio-stream = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.1", features = ["v4", "std", "serde"] }
futures = "*"

aragog = { git = "https://github.com/nextdotid/aragog.git", branch = "master" }

async-trait = "*"
strum_macros = "*"
strum = "*"

# GraphQL
async-graphql = {version = "4", features = ["uuid", "chrono"]}
async-graphql-warp = "*"

[dev_dependencies]
fake = { version = "2.4", features = ["uuid", "chrono"] }
rand = "0.8"
