[package]
name = "relation_server"
version = "0.1.0"
edition = "2021"
autobins = false
authors = ["Nyk Ma <nykma@mask.io>"]
description = "KV storage for each entity of proof_server in NextID ecosystem"
readme = "README.org"
repository = "https://github.com/nextdotid/relation_server"
publish = false

[[bin]]
name = "standalone"
test = false
bench = false

[[bin]]
name = "lambda"
test = false
bench = false

[dependencies]
config = "0.13"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
thiserror = "1.0"

urlencoding = "2.1.2"
http = "0.2.6"
url = "2.2"
lambda_runtime = "0.8.0"
lambda_http = "0.8.0"
hyper = { version = "0.14.*", features = ["full", "backports", "deprecated"] }
hyper-tls = "0.5"
warp = { version = "0.3" }
typetag = "0.2"

tokio = { version = "1", features = ["full"] }
tokio-stream = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.1", features = ["v4", "std", "serde"] }
futures = "*"

async-trait = "*"
maybe-async = "0.2"
strum_macros = "*"
strum = "*"

# Solana Name Service (SNS)
solana-sdk = "<1.16.0"
solana-client = "~1.14.1"
spl-name-service = { version = "0.2.0", features = ["no-entrypoint"] }
spl-token = "3.0.0"
solana-account-decoder = "<1.16.0"
solana-program = "<1.16.0"
sns-sdk = "=1.4.0"
borsh = "0.9"

# GraphQL
async-graphql = { version = "7", features = ["uuid", "chrono"] }
async-graphql-warp = "7"
dataloader = "0.16.0"
deadpool = { version = "0.9.5", features = ["managed"] }
num_cpus = "1.13.0"
array_tool = "1.0.3"

gql_client = "1.0.4"

# cynic GraphQL library
cynic = { version = "3", features = ["http-surf"] }
surf = "2.0.0"
reqwest = { version = "^0.11", features = ["json", "blocking"] }
isahc = "1.7.2"
async-recursion = "1.0.4"
regex = "1.10.2"

[dev-dependencies]
fake = { version = "2.4", features = ["uuid", "chrono"] }
rand = "0.8"
insta = "1.29"
ctor = "*"
